[tool.poetry]
name = "incolumepy.abstract-flask"
version = "0.1.0-alpha.0"
description = ""
authors = ["Britodfbr <britodfbr@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.6"
Flask = "^2.0.1"
python-dotenv = "^0.18.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
