[tool.poetry]
name = "incolumepy.abstract_flask"
version = "0.1.1-alpha.10"
description = ""
authors = ["Britodfbr <britodfbr@gmail.com>"]

packages=[
    {include = 'incolumepy/abstract_flask', from=''},
]

license = "MIT"
readme = "README.md"
homepage = ""
repository = ""
keywords = [""]
classifiers = [
  "License :: Free For Educational Use",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Topic :: Education",
  "Topic :: Education:: Testing",
  "Topic :: Utilities"
]
include = [
  "LICENSE",
]

[tool.poetry.dependencies]
python = "3.9.6"
Flask = "^2.0.1"
python-dotenv = "^0.18.0"
gunicorn = "^20.1.0"
Markdown = "^3.3.4"
fontawesome-free = "^5.15.3"
Flask-Admin = "^1.5.8"
Flask-Login = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
